--- a/.github/workflows/style-doc.yml
+++ b/.github/workflows/style-doc.yml
@@ -30,6 +30,12 @@ jobs:
           url: https://raw.githubusercontent.com/olivr-com/defaults/master/readme/license.md
           target: README.md
 
+      - name: Docs - Readme PWD
+        uses: olivr-com/inject-command-action@v1
+        with:
+          command: pwd | sed 's/\// /g'
+          target: README.md
+
       - name: Lint - Markdown
         uses: avto-dev/markdown-lint@v1
         with:
