--- a/.github/workflows/style-doc.yml
+++ b/.github/workflows/style-doc.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           command: pwd | sed 's/\// /g'
           target: README.md
+          force: true
 
       - name: Lint - Markdown
         uses: avto-dev/markdown-lint@v1
