--- a/.github/workflows/style-doc.yml
+++ b/.github/workflows/style-doc.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           command: pwd | sed 's/\// /g'
           target: README.md
-          force: false
+          force: true
 
       - name: Lint - Download config
         uses: olivr-com/download-file-action@v1
