--- a/.github/workflows/style-doc.yml
+++ b/.github/workflows/style-doc.yml
@@ -14,6 +14,8 @@ jobs:
           target: SECURITY.md
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v2
+        with:
+          branch-suffix: random
   main:
     name: Style and documentation
     runs-on: ubuntu-latest
@@ -60,6 +62,8 @@ jobs:
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v2
+        with:
+          branch-suffix: random
       #- name: Create branch
       #  uses: peterjgrainger/action-create-branch@v1.0.0
       #  env:
