--- a/.github/workflows/style-doc.yml
+++ b/.github/workflows/style-doc.yml
@@ -1,12 +1,11 @@
 name: 'Style and documentation'
-
-on: push
-
 env:
   id: documentation
 
+on: push
+
 jobs:
-  test:
+  generic:
     runs-on: ubuntu-latest
     outputs:
       pull_request: ${{ steps.cpr.outputs.pull-request-number }}
@@ -22,17 +21,22 @@ jobs:
         uses: peter-evans/create-pull-request@v2
         with:
           branch: auto-${{env.id}}-${{github.ref}}
-  main:
+
+  terraform:
     needs: test
     name: Style and documentation
     runs-on: ubuntu-latest
+    outputs:
+      pull_request: ${{ steps.cpr.outputs.pull-request-number }}
     steps:
       - uses: actions/checkout@master
+        id: checkout
         if: ${{ needs.test.outputs.pull_request > 0 }}
         with:
           ref: auto-${{env.id}}-${{github.ref}}
 
       - uses: actions/checkout@master
+        id: checkout
         if: ${{ needs.test.outputs.pull_request == 0 }}
 
       - name: Docs - Readme PWD
@@ -73,13 +77,32 @@ jobs:
       - name: Lint - Cleanup
         run: rm -rf .markdownlint.yml
 
-      #- name: Create branch
-      #  uses: peterjgrainger/action-create-branch@v1.0.0
-      #  env:
-      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #  with:
-      #    branch: documentation-${{ github.head_ref }}
+      - name: Create Pull Request
+        id: cpr
+        if: ${{ needs.test.outputs.pull_request == 0 }}
+        uses: peter-evans/create-pull-request@v2
+        with:
+          branch: auto-${{env.id}}-${{github.ref}}
+
       - name: Commit changes
+        if: ${{ needs.test.outputs.pull_request > 0 }}
         uses: stefanzweifel/git-auto-commit-action@v4.1.6
         with:
           commit_message: Update documentation
+
+  finalize:
+    needs: [test, terraform]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@master
+        if: ${{ needs.test.outputs.pull_request > 0 || needs.terraform.outputs.pull_request > 0 }}
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          env:
+            pr_number: ${{ needs.test.outputs.pull_request || needs.terraform.outputs.pull_request }}
+          script: |
+            github..pulls.merge({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: process.env['pr_number']
+            })
