--- a/.github/workflows/style-doc.yml
+++ b/.github/workflows/style-doc.yml
@@ -77,9 +77,16 @@ jobs:
 
       - name: Create Pull Request
         id: cpr
+        if: ${{ needs.generic.outputs.pull_request == 0 }}
         uses: peter-evans/create-pull-request@v2
         with:
           branch: auto-${{env.id}}-${{github.ref}}
+
+      - name: Commit changes
+        if: ${{ needs.generic.outputs.pull_request > 0 }}
+        uses: stefanzweifel/git-auto-commit-action@v4.1.6
+        with:
+          commit_message: Update documentation
 
   finalize:
     needs: [generic, terraform]
@@ -88,7 +95,7 @@ jobs:
       - uses: actions/github-script@master
         if: ${{ needs.generic.outputs.pull_request > 0 || needs.terraform.outputs.pull_request > 0 }}
         env:
-          pr_generic: ${{ needs.generic.outputs.pull_request || needs.terraform.outputs.pull_request }}
+          pr_generic: ${{ needs.generic.outputs.pull_request || needs.terraform.outputs.pull_request || '' }}
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
