--- a/.github/workflows/style-doc.yml
+++ b/.github/workflows/style-doc.yml
@@ -95,11 +95,11 @@ jobs:
       - uses: actions/github-script@master
         if: ${{ needs.generic.outputs.pull_request > 0 || needs.terraform.outputs.pull_request > 0 }}
         env:
-          pr_generic: ${{ needs.generic.outputs.pull_request }}
+          pr_generic: ${{ needs.generic.outputs.pull_request || needs.terraform.outputs.pull_request || '' }}
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            github..pulls.merge({
+            github.pulls.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: process.env[pr_generic]
